src/core-crm/objects/Finance_GL_Account__c/Finance_GL_Account__c.object-meta.xml
<CustomObject>
    <description>Ledger Account reference data from QUT Finance System.</description>
    <label>Finance GL Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance GL Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>