src/core-crm/objects/Finance_GL_Account__c/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <description>This segment categorises transactions into assets. liabilities, equity, revenue or expenses.</description>
    <inlineHelpText>This segment categorises transactions into assets. liabilities, equity, revenue or expenses.</inlineHelpText>
    <label>Account Code</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>