src/core-crm/objects/Finance_GL_Account__c/fields/Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Activity_Code__c</fullName>
    <description>This segment categories transactions by key university activities.</description>
    <inlineHelpText>This segment categories transactions by key university activities.</inlineHelpText>
    <label>Activity Code</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>