src/core-crm/objects/Finance_GL_Account__c/fields/Campus_Code__c.field-meta.xml
<CustomField>
    <fullName>Campus_Code__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Not currently in use. It was originally included to comply with a standard that was being developed across a number of universities at the time of implementing the current Finance System, but was found not to be required for QUT.</description>
    <inlineHelpText>Not currently in use. It was originally included to comply with a standard that was being developed across a number of universities at the time of implementing the current Finance System, but was found not to be required for QUT.</inlineHelpText>
    <label>Campus Code</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>