src/core-crm/objects/Finance_GL_Account__c/fields/Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>Entity_Code__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This segment is used to distinguish between legal entities.</description>
    <inlineHelpText>This segment is used to distinguish between legal entities.</inlineHelpText>
    <label>Entity Code</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>