src/core-crm/objects/Finance_GL_Account__c/fields/GL_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Code__c</fullName>
    <description>19-digit account code represents QUT’s Finance Chart of Accounts</description>
    <inlineHelpText>19-digit account code represents QUT’s Finance Chart of Accounts</inlineHelpText>
    <label>GL Account Code</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>