src/core-crm/objects/Finance_GL_Account__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies is the GL Account Code is active.</description>
    <inlineHelpText>Identifies is the GL Account Code is active.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>