src/core-crm/objects/Finance_GL_Account__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <description>This segment identifies specific projects or activities within a given responsibility centre.</description>
    <inlineHelpText>This segment identifies specific projects or activities within a given responsibility centre.</inlineHelpText>
    <label>Project Code</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>