src/core-crm/objects/Finance_GL_Account__c/fields/Responsibility_Centre_Code__c.field-meta.xml
<CustomField>
    <fullName>Responsibility_Centre_Code__c</fullName>
    <description>This segment identifies the area of responsibility within QUT, Faculty or Division.</description>
    <inlineHelpText>This segment identifies the area of responsibility within QUT, Faculty or Division.</inlineHelpText>
    <label>Responsibility Centre Code</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>