src/core-crm/objects/Finance_GL_Account__c/fields/Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Type_Code__c</fullName>
    <description>This segment is used to distinguish external, internal, capital and accrual transactions.</description>
    <inlineHelpText>This segment is used to distinguish external, internal, capital and accrual transactions.</inlineHelpText>
    <label>Type Code</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>